http://bugzilla.zimbra.com/show_bug.cgi?id=7068 bug 7068  - fix make xform_label_right  - it should differ from xform_label_left in label alignment  - change three checkboxes to 4-way radio button group when convertd is present on COS form

--- a/Ajax/WebRoot/js/config/style/dwt.css
+++ b/Ajax/WebRoot/js/config/style/dwt.css
@@ -969,7 +969,7 @@
 	text-align:right;
 }
 
-.xform_label_left {
+.xform_label_right {
 	@Label@
 	@TextPadding@
 	text-align:left;
